// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcNavigation > mobile navigation > should close the mobile navigation when the close menu button is clicked > after 1`] = `
<header
  class="ec-mobile-header"
  data-test="ec-mobile-header"
>
  <div
    class="ec-mobile-header__logo"
  >
    
    <img
      alt="Test Brand"
      class="ec-navigation__mobile-header__logo"
      data-test="ec-navigation__mobile-header__logo"
      src="/img/my-brand.png"
    />
    
  </div>
  <button
    class="ec-mobile-header__menu"
    data-test="ec-mobile-header__menu"
    type="button"
  >
    <svg
      class="ec-icon ec-mobile-header__menu__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-menu"
      />
    </svg>
  </button>
</header>
`;

exports[`EcNavigation > mobile navigation > should close the mobile navigation when the close menu button is clicked > before 1`] = `
<div
  class="ec-navigation ec-navigation--mobile-mode"
  data-test="ec-navigation"
>
  <button
    class="ec-navigation__mobile-menu-close-button"
    type="button"
  >
    <svg
      class="ec-icon ec-navigation__mobile-menu-close-button"
      data-test="ec-navigation__mobile-menu-close-button"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-close"
      />
    </svg>
  </button>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo ec-navigation__branding-logo--responsive"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > mobile navigation > should render mobile header if "isResponsive" prop is true 1`] = `
<header
  class="ec-mobile-header"
  data-test="ec-mobile-header"
>
  <div
    class="ec-mobile-header__logo"
  >
    
    <img
      alt="Test Brand"
      class="ec-navigation__mobile-header__logo"
      data-test="ec-navigation__mobile-header__logo"
      src="/img/my-brand.png"
    />
    
  </div>
  <button
    class="ec-mobile-header__menu"
    data-test="ec-mobile-header__menu"
    type="button"
  >
    <svg
      class="ec-icon ec-mobile-header__menu__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-menu"
      />
    </svg>
  </button>
</header>
`;

exports[`EcNavigation > mobile navigation > should show render the mobile navigation when the mobile header menu button is clicked > after 1`] = `
<div
  class="ec-navigation ec-navigation--mobile-mode"
  data-test="ec-navigation"
>
  <button
    class="ec-navigation__mobile-menu-close-button"
    type="button"
  >
    <svg
      class="ec-icon ec-navigation__mobile-menu-close-button"
      data-test="ec-navigation__mobile-menu-close-button"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-close"
      />
    </svg>
  </button>
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo ec-navigation__branding-logo--responsive"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > mobile navigation > should show render the mobile navigation when the mobile header menu button is clicked > before 1`] = `
<header
  class="ec-mobile-header"
  data-test="ec-mobile-header"
>
  <div
    class="ec-mobile-header__logo"
  >
    
    <img
      alt="Test Brand"
      class="ec-navigation__mobile-header__logo"
      data-test="ec-navigation__mobile-header__logo"
      src="/img/my-brand.png"
    />
    
  </div>
  <button
    class="ec-mobile-header__menu"
    data-test="ec-mobile-header__menu"
    type="button"
  >
    <svg
      class="ec-icon ec-mobile-header__menu__icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-menu"
      />
    </svg>
  </button>
</header>
`;

exports[`EcNavigation > should apply light mode CSS classes if "isInLightMode" prop is true 1`] = `
<div
  class="ec-navigation ec-navigation--light-mode"
  data-test="ec-navigation"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <hr
    class="ec-navigation__separator"
  />
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should be collapsable when isCollapsable is set 1`] = `
<div
  class="ec-navigation ec-navigation--is-collapsable"
  data-test="ec-navigation"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should be collapsed when isCollapsed is set to true 1`] = `
<div
  class="ec-navigation ec-navigation--is-collapsed"
  data-test="ec-navigation"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should be expanded when isCollapsed is set to false 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should not render branding if logo is given in branding object but showBrandingLogo is set to false 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should not render branding if no logo is given in branding object 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should only render mandatory slot if no other slots were given 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should render all given slots 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <div
    class="ec-navigation__block ec-navigation__user-info"
    data-test="ec-navigation__block ec-navigation__user-info"
  >
    
    <div>
      User Info
    </div>
    
  </div>
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__call-to-action"
    data-test="ec-navigation__block ec-navigation__call-to-action"
  >
    
    <div>
      CTA
    </div>
    
  </div>
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    <div>
      Menu
    </div>
    
  </div>
  <div
    class="ec-navigation__block ec-navigation__footer-menu"
    data-test="ec-navigation__block ec-navigation__footer-menu"
  >
    
    <div>
      Footer Menu
    </div>
    
  </div>
  <div
    class="ec-navigation__block ec-navigation__copyright"
    data-test="ec-navigation__block ec-navigation__copyright"
  >
    
    <div>
      Copyright
    </div>
    
  </div>
</div>
`;

exports[`EcNavigation > should render branding logo and name when given > Branding should have alt and src. 1`] = `
<div
  class="ec-navigation__branding"
  data-test="ec-navigation__branding"
>
  <img
    alt="My Branding"
    class="ec-navigation__branding-logo"
    data-test="ec-navigation__branding-logo"
    src="/img/my.png"
  />
</div>
`;

exports[`EcNavigation > should render branding logo and name when given 1`] = `
<div
  class="ec-navigation"
  data-test="ec-navigation"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="My Branding"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcNavigation > should render with custom attributes 1`] = `
<div
  class="ec-navigation my-class"
  data-test="my-data-test ec-navigation"
  id="test-id"
>
  <!--v-if-->
  <div
    class="ec-navigation__branding"
    data-test="ec-navigation__branding"
  >
    <img
      alt="Test Brand"
      class="ec-navigation__branding-logo"
      data-test="ec-navigation__branding-logo"
      src="/img/my-brand.png"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-navigation__block ec-navigation__menu"
    data-test="ec-navigation__block ec-navigation__menu"
  >
    
    
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;
